--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.18.0",
     "better-scroll": "^1.9.1",
     "fastclick": "^1.0.6",
+    "good-storage": "^1.0.1",
+    "jsonp": "^0.2.1",
     "vue": "^2.5.13",
     "vue-lazyload": "^1.2.3",
     "vue-router": "^3.0.1",
